--- a/kube/service-monitoring.yaml
+++ b/kube/service-monitoring.yaml
@@ -2,12 +2,17 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: prometheus-self
+  namespace: default
   labels:
     app: prometheus
+    release: my-prometheus
 spec:
   endpoints:
   - interval: 30s
     port: web
   selector:
     matchLabels:
-      app: prometheus
+      app: node-app
+  namespaceSelector: 
+    matchNames:
+      - node-app
